Add basic skills page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -4,7 +4,7 @@
 $text-color: white
 $science-color: #009688
 $literature-color: #1B5E20
-$literature-color: #1B5E20
+$skills-color: #1A237E
 
 body
   margin: 0
@@ -37,7 +37,7 @@ ul.navigation
       background-color: $literature-color
 
     &#skills
-      background-color: #2B05B3
+      background-color: $skills-color
 
     &#about
       line-height: 100px
@@ -65,6 +65,9 @@ ul.navigation
 
 .literature
   background-color: $literature-color
+
+.skills
+  background-color: $skills-color
 
 h2
   font-size: 48px
