--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -7,7 +7,7 @@ header
         <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9H9V9h10v2zm-4 4H9v-2h6v2zm4-8H9V5h10v2z"/></svg>
       li#skills data-tab="skills"
         <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M3 18h6v-2H3v2zM3 6v2h18V6H3zm0 7h12v-2H3v2z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
-      li#about
+      li#about data-tab="about"
         <svg fill="#FFFFFF" height="60" viewBox="0 0 24 24" width="60" xmlns="http://www.w3.org/2000/svg"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
       li#projects
         = icon('cogs', class: "fa-2x")
@@ -92,3 +92,30 @@ main
           = image_tag('skills/scala.png', size: '96')
           progress value="5" max="100" 5%
           figcaption Scala
+
+  .about.tab
+    h2 = t('.about')
+    p
+      = t('.about_content.hello')
+    p
+      = t('.about_content.me')
+    p
+      = t('.about_content.nicknames')
+    p
+      = t('.about_content.interests')
+    .interests
+      .interest
+        = image_tag("interests/it.png", alt: t('.about_content.interests_list.it'))
+        .interest-tip
+          = t('.about_content.interests_list.it')
+      .interest
+        = image_tag("interests/sciences.png", alt: t('.about_content.interests_list.sciences'), class: 'interest')
+        .interest-tip
+          = t('.about_content.interests_list.sciences')
+      .interest
+        = image_tag("interests/foreign_languages.png", alt: t('.about_content.interests_list.foreign_languages'), class: 'interest')
+        .interest-tip
+          = t('.about_content.interests_list.foreign_languages')
+      .interest
+        = image_tag("interests/literature.png", alt: t('.about_content.interests_list.literature'), class: 'interest')
+        .interest-tip = t('.about_content.interests_list.literature')
