Add basic photos page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -6,6 +6,7 @@ $science-color: #009688
 $literature-color: #1B5E20
 $skills-color: #1A237E
 $about-color: #212121
+$photos-color: #EF6C00
 
 body
   margin: 0
@@ -48,7 +49,7 @@ ul.navigation
       background-color: #631262
 
     &#photos
-      background-color: #ED9200
+      background-color: $photos-color
 
     &#contacts
       background-color: #7A0000
