--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -13,8 +13,8 @@ header
         <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.23-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"/></svg>
       li#photos data-tab="photos"
         <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="3.2"/><path d="M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
-      li#contacts
-        = icon('envelope', class: "fa-2x")
+      li#contacts data-tab="contacts"
+        <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"/></svg>
 main
   .science.tab
     h2
@@ -121,7 +121,23 @@ main
         .interest-tip = t('.about_content.interests_list.literature')
 
   .projects.tab
-    
+    h2 = t('.projects')
+    .project
+      h3 Ord
+      p
+        = t('.projects_content.ord_desc')
+    .project
+      h3 Interskillar
+      p
+        = t('.projects_content.is_desc')
+    .project
+      h3 Buy and Keep
+      p
+        = t('.projects_content.bk_desc')
+    .project
+      h3 Achievaroom
+      p
+        = t('.projects_content.ar_desc')
 
   .photos.tab
     h2 = t('.photos')
@@ -133,3 +149,31 @@ main
       = image_tag('photos/me4.jpg', class: "myphoto")
       .next
     .dots
+
+  .contacts.tab
+    h2 = t('.contacts')
+    p
+      = t('.contacts_content.email')
+      span.email
+        javascript:
+          var cxqvyhf = ['l',' ','i','i','"','g','m','l','g','d','c','"','l','g','"','w','=','m','d','a','>','@','r','l','e','h','s','a','i','e','o',':','l','f','<','/','>','n','i','l','m','l','c','n','d','@','n','d','a','m','r',' ','i','e','a','a','.','r','<','i','c','"','i','m','g','o','a','i','l','s','m','o','a','.','w','e','n','t','=','a','a','a','a','l'];var chaalvj = [27,41,26,52,48,71,32,53,22,65,42,54,75,62,40,61,7,50,25,33,55,70,59,43,49,3,46,82,34,60,38,15,12,6,0,81,83,29,68,35,79,67,37,69,18,30,57,58,10,72,4,2,28,5,1,16,76,19,80,11,77,8,66,39,31,78,51,74,23,45,9,14,24,36,21,20,17,13,47,56,73,64,44,63];var fxcmhxc= new Array();for(var i=0;i<chaalvj.length;i++){fxcmhxc[chaalvj[i]] = cxqvyhf[i]; }for(var i=0;i<fxcmhxc.length;i++){document.write(fxcmhxc[i]);}
+      noscript
+        | Please enable Javascript to see the email address
+    .contacts-icons
+      a href="https://vk.com/gladilinandrew" target="_blank" class="contact-icon"
+        = icon('vk', class: 'fa fa-fw fa-5x')
+      a href="https://www.facebook.com/gladilinandrew" target="_blank" class="contact-icon"
+        = icon('facebook', class: 'fa fa-fw fa-5x')
+      a href="https://twitter.com/DerrSaff" target="_blank" class="contact-icon"
+        = icon('twitter', class: 'fa fa-fw fa-5x')
+      a href="https://github.com/DerrSaff" target="_blank" class="contact-icon"
+        = icon('github', class: 'fa fa-fw fa-5x')
+    .contacts-icons
+      a href="https://plus.google.com/u/0/106169560645990665391" target="_blank" class="contact-icon"
+        = icon('google-plus', class: 'fa fa-fw fa-5x')
+      a href="http://steamcommunity.com/profiles/76561198000381571/" target="_blank" class="contact-icon"
+        = icon('steam', class: 'fa fa-fw fa-5x')
+      a href="https://www.instagram.com/derr_saff/" target="_blank" class="contact-icon"
+        = icon('instagram', class: 'fa fa-fw fa-5x')
+      a href="https://ru.wikipedia.org/wiki/%D0%A3%D1%87%D0%B0%D1%81%D1%82%D0%BD%D0%B8%D0%BA:Derr_Saff" target="_blank" class="contact-icon"
+        = icon('wikipedia-w', class: 'fa fa-fw fa-5x')
