--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -1,22 +1,22 @@
 header
   nav
     ul.navigation.fa-ul
-      li#science data-tab="science"
+      li.science data-tab="science"
         <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"/></svg>
-      li#literature data-tab="literature"
+      li.literature data-tab="literature"
         <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9H9V9h10v2zm-4 4H9v-2h6v2zm4-8H9V5h10v2z"/></svg>
-      li#skills data-tab="skills"
+      li.skills data-tab="skills"
         <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M3 18h6v-2H3v2zM3 6v2h18V6H3zm0 7h12v-2H3v2z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
-      li#about data-tab="about"
+      li.about data-tab="about"
         <svg fill="#FFFFFF" height="60" viewBox="0 0 24 24" width="60" xmlns="http://www.w3.org/2000/svg"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
-      li#projects data-tab="projects"
+      li.projects data-tab="projects"
         <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.23-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"/></svg>
-      li#photos data-tab="photos"
+      li.photos data-tab="photos"
         <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="3.2"/><path d="M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
-      li#contacts data-tab="contacts"
+      li.contacts data-tab="contacts"
         <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"/></svg>
 main
-  .science.tab
+  .tab.science
     h2
       = t('.science')
     p
@@ -31,7 +31,7 @@ main
       a href="/achievements" target="_blank"
         = t('.science_content.achievements_title')
 
-  .literature.tab
+  .tab.literature
     h2 = t('.literature')
     p
       = t('.works_content.my_way')
@@ -45,7 +45,7 @@ main
       .collection
         h3 = t('.works_content.collections.web_of_strings')
 
-  .skills.tab
+  .tab.skills
     h2 = t('.skills')
     p
       = t('.skills_content.level')
@@ -93,7 +93,7 @@ main
           progress value="5" max="100" 5%
           figcaption Scala
 
-  .about.tab
+  .tab.about
     h2 = t('.about')
     p
       = t('.about_content.hello')
@@ -120,7 +120,7 @@ main
         = image_tag("interests/literature.png", alt: t('.about_content.interests_list.literature'), class: 'interest')
         .interest-tip = t('.about_content.interests_list.literature')
 
-  .projects.tab
+  .tab.projects
     h2 = t('.projects')
     .project
       h3 Ord
@@ -139,7 +139,7 @@ main
       p
         = t('.projects_content.ar_desc')
 
-  .photos.tab
+  .tab.photos
     h2 = t('.photos')
     .gallery
       .previous
@@ -150,7 +150,7 @@ main
       .next
     .dots
 
-  .contacts.tab
+  .tab.contacts
     h2 = t('.contacts')
     p
       = t('.contacts_content.email')
