--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -35,7 +35,7 @@ body
   margin: 0
   padding: 0
   color: $text-color
-  font-size: 18px
+  font-size: 30px
   background-color: black
   font-family: 'PT Sans', sans-serif
 
@@ -54,19 +54,27 @@ ul.navigation
     width: 15%
     margin-left: auto
     margin-right: auto
+    line-height: 95px
 
     &:hover
       filter: brightness(120%)
 
 .tab
+  padding-top: 10px
   padding-left: 20px
   padding-right: 20px
-  height: 90vh
+  min-height: 90vh
+
+.text-wrapper
+  text-align: justify
+  margin-left: auto
+  margin-right: auto
+  max-width: 700px
 
 h2
   font-size: 48px
-  letter-spacing: 3px
+  letter-spacing: 7px
   text-align: center
-  margin: 0
   padding: 0
+  margin: 0
   text-transform: uppercase
