--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -17,19 +17,22 @@ header
         <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"/></svg>
 main
   .tab.science
-    h2
-      = t('.science')
-    p
-      = t('.science_content.theme')
-      = t('.science_content.thesis')
-      a href="https://github.com/DerrSaff/mythesis" target="_blank" https://github.com/DerrSaff/mythesis
-    p
-      = t('.science_content.articles')
-      a href="https://github.com/DerrSaff/myarticles" target="_blank" https://github.com/DerrSaff/myarticles
-    p
-      = t('.science_content.achievements_desc')
-      a href="/achievements" target="_blank"
-        = t('.science_content.achievements_title')
+    .text-wrapper
+      h2
+        = t('.science')
+      p
+        = t('.science_content.intro')
+      p
+        = t('.science_content.theme')
+      p
+        = raw t('.science_content.thesis', link: '<a href="https://github.com/DerrSaff/mythesis" target="_blank">' + 'git-' + t('.science_content.repository') + '</a>')
+      p
+        = t('.science_content.articles')
+        a href="https://github.com/DerrSaff/myarticles" target="_blank" https://github.com/DerrSaff/myarticles
+      p
+        = t('.science_content.achievements_desc')
+        a href="/achievements" target="_blank"
+          = t('.science_content.achievements_title')
 
   .tab.literature
     h2 = t('.literature')
