Add svg icons to header

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,8 +1,8 @@
 header
   nav
-    | Logo
-    | About
-    | Search
-    | Profile
-    | Sign in
-    | Sign up
+    / | Logo
+    = inline_svg "info.svg", class: 'info-icon header-icon'
+    = inline_svg "search.svg", class: 'sign-up-icon header-icon'
+    = inline_svg "settings.svg", class: 'settings-icon header-icon'
+    = inline_svg "sign_in.svg", class: 'settings-icon header-icon'
+    = inline_svg "sign_up.svg", class: 'sign-up-icon header-icon'
