Add colorscheme variables

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,9 +1,21 @@
+// the colorscheme is https://coolors.co/0d1321-b3001b-f5e9e2-255c99-7ea3cc
+$header-color: #0D1321
+$title-color: #B3001B
+$background-color: #F5E9E2
+$link-color: #255C99
+$label-color: #7EA3CC
+
 body
   margin: 0
   padding: 0
+  background-color: $background-color
 nav
   height: 64px
-  background-color: #E0E0E0
+  background-color: $header-color
   display: flex
   justify-content: space-between
   align-items: center
+
+.header-icon
+  margin-left: 10px
+  margin-right: 10px
