Fix header icons, add text without

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -15,6 +15,16 @@ nav
   display: flex
   justify-content: space-between
   align-items: center
+  color: white
+  text-transform: uppercase
+
+  a
+    color: white
+    margin-right: 20px
+
+    &:active,
+    &:visited
+      color: white
 
 .header-icon
   margin-left: 10px
