--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -5,6 +5,6 @@ header
       = inline_svg "info.svg", class: 'info-icon header-icon'
       = inline_svg "search.svg", class: 'search-icon header-icon'
     .header-right-side
-      = inline_svg "settings.svg", class: 'settings-icon header-icon'
-      = inline_svg "sign_in.svg", class: 'sign-in-icon header-icon'
-      = inline_svg "sign_up.svg", class: 'sign-up-icon header-icon'
+      = link_to "Sign up", "#"
+      = link_to "Sign in", "#"
+      / = inline_svg "menu.svg", class: 'menu-icon header-icon'
