--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -20,12 +20,21 @@ nav
 
   a
     color: white
+    text-decoration: none
     margin-right: 20px
 
     &:active,
     &:visited
       color: white
+      text-decoration: none
 
 .header-icon
+  cursor: pointer
+
+.logo
   margin-left: 10px
   margin-right: 10px
+
+h2
+  text-transform: uppercase
+  color: $title-color
