--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,10 +1,11 @@
 header
   nav
     .header-left-side
-      | Logo
-      = inline_svg "info.svg", class: 'info-icon header-icon'
-      = inline_svg "search.svg", class: 'search-icon header-icon'
+      = link_to image_tag('logo.jpg', class: 'logo header-icon', size: '36'), posts_path
+      = link_to inline_svg('info.svg', class: 'info-icon header-icon'), about_path
+      = link_to inline_svg('search.svg', class: 'search-icon header-icon'), '#'
+      = link_to inline_svg('add.svg', class: 'add-icon header-icon'), new_post_path
     .header-right-side
-      = link_to "Sign up", "#"
-      = link_to "Sign in", "#"
-      / = inline_svg "menu.svg", class: 'menu-icon header-icon'
+      = link_to 'Sign up', '#', class: 'button'
+      = link_to 'Sign in', '#', class: 'button'
+      / = inline_svg 'menu.svg', class: 'menu-icon header-icon'
