--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -3,9 +3,14 @@ header
     .header-left-side
       = link_to image_tag('logo.jpg', class: 'logo header-icon', size: '36'), posts_path
       = link_to inline_svg('info.svg', class: 'info-icon header-icon'), about_path
-      = link_to inline_svg('search.svg', class: 'search-icon header-icon'), '#'
+
+      form.search-form action="/search" method="get"
+        label for="search-radio-switcher"
+          = inline_svg('search.svg', class: 'search-icon header-icon')
+        input type="checkbox" id='search-radio-switcher' name='search'
+        input type="text" id='search-field' name=''
       = link_to inline_svg('add.svg', class: 'add-icon header-icon'), new_post_path
     .header-right-side
-      = link_to 'Sign up', '#', class: 'button'
-      = link_to 'Sign in', '#', class: 'button'
+      = link_to 'Sign up', '#', class: 'sign-up button'
+      = link_to 'Sign in', '#', class: 'sign-in button'
       / = inline_svg 'menu.svg', class: 'menu-icon header-icon'
