--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,4 +1,5 @@
-h2.centered Sign up
+h2.centered
+  | Sign up
 
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = devise_error_messages!
@@ -12,8 +13,7 @@ h2.centered Sign up
     = f.label :password
     - if @minimum_password_length
       em
-        = @minimum_password_length
-        | characters minimum
+        |    (#{@minimum_password_length} characters minimum)
     br
     = f.password_field :password, autocomplete: "off"
 
