--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,28 +1,22 @@
-h2.centered
-  | Sign up
+.wrapper
+  h2.centered
+    | Sign up
 
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-
-  div.field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true
-
-  div.field
-    = f.label :password
-    - if @minimum_password_length
-      em
-        |    (#{@minimum_password_length} characters minimum)
-    br
-    = f.password_field :password, autocomplete: "off"
-
-  div.field
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: "off"
-
-  div.actions
+  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    = devise_error_messages!
+    / = f.label :email
+    / br
+    = f.email_field :email, autofocus: true, placeholder: "Email"
+    = f.text_field :name, placeholder: "Name"
+    / = f.label :password
+    / - if @minimum_password_length
+    /   em
+    /     |    (#{@minimum_password_length} characters minimum)
+    / br
+    = f.password_field :password, autocomplete: "off", placeholder: "Password"
+    / = f.label :password_confirmation
+    / br
+    = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Password confirmation"
     = f.submit "Sign up"
 
-= render "devise/shared/links"
+  /= render "devise/shared/links"
