Add some styles to posts index, add helper for admin checkings, add svg icons

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -132,3 +132,14 @@ h2
   font-size: 40px
   text-transform: uppercase
   color: $title-color
+
+.posts-wrapper
+  width: 70%
+  margin: 0 auto
+
+.edit-icon,
+.delete-icon
+  position: absolute
+
+.delete-icon
+  transform: translateX(10px)
