--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -9,7 +9,7 @@ header
           = inline_svg('search.svg', class: 'search-icon header-icon')
         input.display-switcher type="checkbox" id='search-radio-switcher' name='search'
         input type="text" id='search-field' name=''
-      - if current_user && current_user.role == "admin"
+      - if admin?
         = link_to inline_svg('add.svg', class: 'add-icon header-icon'), new_post_path
     .header-right-side
       - if user_signed_in?
