--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -4,8 +4,8 @@
       h2.post-title
         = post.header
         - if admin?
-          = link_to inline_svg('edit.svg', class: 'edit-icon'), edit_post_path(post)
-          = link_to inline_svg('delete.svg', class: 'delete-icon'), post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete-icon'
+          = link_to inline_svg('edit.svg', class: 'edit-icon'), edit_post_path(post), class: 'absoluted'
+          = link_to inline_svg('delete.svg', class: 'delete-icon'), post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'absoluted'
       .post-desc
         = truncate(post.text, length: 100)
         / = post.desc
