Add views field and icon

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -13,3 +13,5 @@
           = tag
       .post-footer
         = post.created_at.strftime("%m/%d/%Y %H:%M")
+        = inline_svg('views.svg', class: 'views-icon')
+        = post.views
