Add Dislike model and icon

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -17,3 +17,5 @@
         = post.views
         = inline_svg('like.svg', class: 'like-icon')
         = post.likes.count
+        = inline_svg('dislike.svg', class: 'dislike-icon')
+        = post.dislikes.count
