--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,7 +4,7 @@ html
     title Saff'a
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload', async: Rails.env.production?
+    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body.body
     = render partial: 'shared/header'
     main
