--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -4,8 +4,11 @@
       h2
         = link_to post.header, post, class: 'post-title'
       - if admin?
-        = link_to inline_svg('edit.svg', class: 'edit-icon'), edit_post_path(post), class: 'absoluted'
-        = link_to inline_svg('delete.svg', class: 'delete-icon'), post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'absoluted'
+        = link_to inline_svg('edit.svg', class: 'edit-icon'), edit_post_path(post)
+        = link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }
+        = link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }
+        / = link_to inline_svg('edit.svg', class: 'edit-icon'), edit_post_path(post), class: 'absoluted'
+        / = link_to inline_svg('delete.svg', class: 'delete-icon'), post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'absoluted'
       .post-summary
         = post.summary
       .post-tags
