--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -2,21 +2,21 @@
   h2.centered
     | Sign up
 
-  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form'}) do |f|
     = devise_error_messages!
     / = f.label :email
     / br
-    = f.email_field :email, autofocus: true, placeholder: "Email"
-    = f.text_field :name, placeholder: "Name"
+    = f.email_field :email, autofocus: true, placeholder: "Email", class: "email-input"
+    = f.text_field :name, placeholder: "Name", class: "text-input"
     / = f.label :password
     / - if @minimum_password_length
     /   em
     /     |    (#{@minimum_password_length} characters minimum)
     / br
-    = f.password_field :password, autocomplete: "off", placeholder: "Password"
+    = f.password_field :password, autocomplete: "off", placeholder: "Password", class: "password-input"
     / = f.label :password_confirmation
     / br
-    = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Password confirmation"
-    = f.submit "Sign up"
+    = f.password_field :password_confirmation, autocomplete: "off", class: "password-input", placeholder: "Password confirmation"
+    = f.submit "Sign up", class: 'submit-button'
 
   /= render "devise/shared/links"
