Improve new post page

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,21 +1,19 @@
-.form-wrapper
-  = form_for(post) do |f|
-    - if post.errors.any?
-      .error_explanation
-        h2 = pluralize(post.errors.count, "error")
-          | prohibited this post from being saved:
+= form_for(post, html: {class: 'form'}) do |f|
+  - if post.errors.any?
+    .error_explanation
+      h2 = pluralize(post.errors.count, "error")
+        | prohibited this post from being saved:
 
-        ul
-        - post.errors.full_messages.each do |message|
-          li = message
+      ul
+      - post.errors.full_messages.each do |message|
+        li = message
 
-    .field
-      / = f.label :header
-      = f.text_field :header
+  / = f.label :header
+  = f.text_field :header, class: 'text-input', placeholder: 'Header'
+  
+  = f.text_field :summary, class: 'textarea-input', placeholder: 'A post or the summary of an article'
 
-    .field
-      = f.label :text
-      = f.text_area :text
+  / = f.label :text
+  = f.text_area :text, class: 'textarea-input', placeholder: 'Text of the post'
 
-    .actions
-      = f.submit
+  = f.submit 'Post it', class: 'submit-button'
