Fixing those fucking icons

--- a/app/assets/stylesheets/blog/global-modifiers.sass
+++ b/app/assets/stylesheets/blog/global-modifiers.sass
@@ -14,3 +14,15 @@
 
 .absoluted
   position: absolute
+
+.relatived
+  position: relative
+
+.inline
+  display: inline
+
+.inline-block
+  display: inline-block
+
+.padded-5px
+  padding: 5px
