Improve post layout

--- a/app/assets/stylesheets/blog/variables.sass
+++ b/app/assets/stylesheets/blog/variables.sass
@@ -4,3 +4,5 @@ $title-color: #B3001B
 $background-color: #F5E9E2
 $link-color: #255C99
 $label-color: #7EA3CC
+
+$post-background: rgb(255, 249, 249)
