--- a/app/assets/stylesheets/blog/post/post__title/post__title.sass
+++ b/app/assets/stylesheets/blog/post/post__title/post__title.sass
@@ -1,8 +1,7 @@
-.post-title
-  font-size: 40px
+.post__title
+  font-size: 30px
   // text-transform: uppercase
   color: $title-color
   font-family: 'Lora', serif
-  margin: 0
   padding: 0
-  display: inline
+  display: inline-block
