Add styles for buttons

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -17,6 +17,6 @@
     / = f.label :password_confirmation
     / br
     = f.password_field :password_confirmation, autocomplete: "off", class: "password-input", placeholder: "Password confirmation"
-    = f.submit "Sign up", class: 'submit-button'
+    = f.submit "Sign up", class: 'button button_fs30 button_h60'
 
   /= render "devise/shared/links"
