--- a/app/assets/stylesheets/blog/button/button.sass
+++ b/app/assets/stylesheets/blog/button/button.sass
@@ -1,9 +1,10 @@
-.submit-button
-  margin-top: 30px
-  font-size: 30px
+.button
   border: none
   color: white
   height: 60px
   padding-top: 10px
   padding-bottom: 10px
   background-color: $link-color
+
+  &:hover
+    filter: brightness(120%)
