--- a/app/assets/stylesheets/blog/button/button.sass
+++ b/app/assets/stylesheets/blog/button/button.sass
@@ -1,10 +1,9 @@
 .button
   border: none
   color: white
-  height: 60px
-  padding-top: 10px
-  padding-bottom: 10px
+  padding: 15px
   background-color: $link-color
+  text-transform: uppercase
 
   &:hover
     filter: brightness(120%)
