--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -11,6 +11,12 @@
   / = f.label :header
   = f.text_field :header, class: 'text-input', placeholder: 'Header'
   
+  = f.text_field :original_header, class: 'text-input', placeholder: 'Original header'
+  
+  = f.text_field :author, class: 'text-input', placeholder: 'Author'
+  
+  = f.text_field :link, class: 'text-input', placeholder: 'Link'
+  
   = f.text_field :summary, class: 'textarea-input', placeholder: 'A post or the summary of an article'
 
   / = f.label :text
