--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -2,12 +2,12 @@ p#notice
   = notice
   
 .posts
-  h2.post__title.post__title_margined
-    = @post.header
-  .subtitle
-    | Перевод статьи #{link_to @post.original_header, @post.link} под авторством #{@post.author}
-    = 
-  = raw @post.text
+  .post
+    h2.post__title.post__title_margined
+      = @post.header
+    .post__subtitle.post__subtitle_fs18
+      | Перевод статьи #{link_to @post.original_header, @post.link} под авторством #{@post.author}
+    = raw @post.text
 
 / = link_to 'Edit |', edit_post_path(@post)
 / = link_to 'Back', posts_path
