Changes of textarea and popup notices

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -22,4 +22,4 @@
   / = f.label :text
   = f.text_area :text, class: 'textarea-input', placeholder: 'Text of the post'
 
-  = f.submit 'Post it', class: 'submit-button'
+  = f.submit 'Post it', class: 'button button_fs20'
