--- a/app/views/posts/edit.html.slim
+++ b/app/views/posts/edit.html.slim
@@ -1,6 +1,3 @@
-h1 Editing Post
-
-= render 'form', post: @post
-
-= link_to 'Show', @post 
-= link_to 'Back', posts_path
+.posts
+  h1 Editing post
+  = render 'form', post: @post
