--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -12,6 +12,8 @@ header.header.header_shadowed
         input.search-form__input type="text" name='search-form__text'
       - if admin?
         = link_to inline_svg('add.svg', class: 'navigation__add-icon'), new_post_path
+        - unless @post.nil?
+          = link_to 'Edit', edit_post_path(@post)
   .header__right-side.header_right-side_uppercase
     - if user_signed_in?
       label for="dropdown-menu__switch"
