--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -8,7 +8,7 @@
       = @post.header
     .post__subtitle.post__subtitle_fs18
       | Перевод статьи #{link_to @post.original_header, @post.link} под авторством #{@post.author}
-    = markdown(@post.text)
+    = raw @post.text
 
 / = link_to 'Edit |', edit_post_path(@post)
 / = link_to 'Back', posts_path
