--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,7 +1,7 @@
 - if notice
   .popup
     = notice
-  
+
 .posts
   .post
     h2.post__title.post__title_margined
@@ -9,6 +9,7 @@
     .post__subtitle.post__subtitle_fs18
       | Перевод статьи #{link_to @post.original_header, @post.link} под авторством #{@post.author}
     = raw @post.text
+    = javascript_tag @post.javascript
 
 / = link_to 'Edit |', edit_post_path(@post)
 / = link_to 'Back', posts_path
