Add Css field to Post

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -20,6 +20,8 @@
 
   = f.text_area :text, class: 'textarea-input', placeholder: 'Text of the post'
 
+  = f.text_area :css, class: 'textarea-input', placeholder: 'Custom css of the post'
+
   = f.text_area :javascript, class: 'textarea-input', placeholder: 'Custom Javascript of the post'
 
   = f.submit 'Post it', class: 'button button_fs20'
