--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -8,6 +8,7 @@
       = @post.header
     .post__subtitle.post__subtitle_fs18
       | Перевод статьи #{link_to @post.original_header, @post.link} под авторством #{@post.author}
+    = raw @post.css
     = raw @post.text
     = javascript_tag @post.javascript
 
