--- a/app/assets/stylesheets/blog/dropdown-menu/dropdown-menu__switch/dropdown-menu__switch.sass
+++ b/app/assets/stylesheets/blog/dropdown-menu/dropdown-menu__switch/dropdown-menu__switch.sass
@@ -1,3 +1,3 @@
-.dropdown-menu__switch:checked ~ .dropdown-menu
+.dropdown-menu__switch:checked + .dropdown-menu_settings
   top: 50px
   right: 30px
