--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -1,19 +1,19 @@
-p#notice
-  = notice
-h1
-  | Books
-table
-  thead
-    tr
-      th[colspan="3"]
-  tbody
-    - @books.each do |book|
-      tr
-        td
-          = link_to 'Show', book
-        td
-          = link_to 'Edit', edit_book_path(book)
-        td
-          = link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' }
-br
-= link_to 'New Book', new_book_path
+- if notice
+    .popup
+      = notice
+
+.books
+  - @books.each do |book|
+    .book
+      = link_to image_tag(book.book_picture_url, class: "book__picture"), book_path(book), class: "book__picture-link"
+      .book__name.centered
+        = link_to book.name, book_path(book), class: "book__name"
+      
+      span.book__percents
+        | #{(book.pages_read.fdiv(book.total_pages)*100.0).round}% прочитано
+        
+      .book__progress
+        progress.book__progress value=book.pages_read max=book.total_pages
+      - if admin?
+        = link_to 'Edit', edit_book_path(book)
+        = link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' }
